<resources>
    <string name="app_name">BMI</string>
    <string name="bmi_checker">BMI Checker</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agee">Age :</string>
    <string name="sex">Sex:</string>
    <string name="weight">Weight:</string>
    <string name="weight_in_kgs">Weight (in Kgs)</string>
    <string name="height">Height</string>
    <string name="height_in_cms">Height (in cms)</string>
    <string name="check_bmi">Check BMI</string>
    <string name="bmi">BMI:</string>
</resources>
